2002-07-07  Han-Wen  <hanwen@cs.uu.nl>

	* Documentation/user/tutorial.itely: doc carnage.

2002-07-06  Rune Zedeler  <rune@zedeler.dk>

	* Documentation/user/refman.itely: Documented accidentals
	(incl. bugs), subdivideBeams and drum/percussion notation.

	* lily/translator-group.cc, lily/include/translator-group.hh
	(Translator_group::set_children_property): removed.

	* lily/accidental-engraver.cc: don't use
	Translator_group::set_children_property.

	* lily/new-accidental-engraver.cc: Added. More correct
	accidentals, but wrong spacing.

	* lily/beam-enagraver.cc, lily/auto-beam-engraver.cc: Small
	subdivideBeams-fixes.

	* scm/drums.scm: Small changes/fixes in instruments and maps
	
2002-07-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lexer-gcc-3.1.sh: Fixes and more comments.

	* Documentation/topdocs/INSTALL.texi: Add comment about gcc-3.0.4
	problems.

	* lily/include/stream.hh:
	* lily/include/moment.hh:
	* lily/include/midi-stream.hh:
	* lily/streams.cc:
	* lily/scm-option.cc:
	* lily/parser.yy:
	* lily/my-lily-lexer.cc:
	* lily/moment.cc:
	* lily/midi-stream.cc:
	* lily/main.cc:
	* lily/lexer.ll:
	* lily/includable-lexer.cc:
	* flower/include/source-file.hh:
	* flower/include/parray.hh:
	* flower/include/dictionary.hh:
	* flower/include/array.icc:
	* flower/string.cc: 
	* flower/source-file.cc:
	* flower/getopt-long.cc: gcc-3.1 fixes.

	* stepmake/stepmake/generic-targets.make: Add comment about warning.

	* lexer-gcc-3.0.patch: Add comment, and a fix for installations
	that have an unpatched flex and gcc-3.1.x.

	* Documentation/topdocs/INSTALL.texi: Add comments and
	instructions on gcc-3.1.x.

	* lexer-gcc-3.1.sh: New file.

	* aclocal.m4: regenerate.
	
	* stepmake/aclocal.m4: Version compare fix.

2002-07-05  Han-Wen  <hanwen@cs.uu.nl>

	* ly/engraver-init.ly (RhythmicStaffContext): stems up by default.

	* lily-guile.hh: remove guile 1.3 compatibility,  add 1.4
	compatibility functions.

2002-07-05  Jan Nieuwenhuizen  <janneke@gnu.org>
